objects/MBO_Item__c.object
<CustomObject>
    <fields>
        <fullName>IsModified__c</fullName>
        <description>Used this flag to identify whether a line item is modified after its last scheduled. Will avoid numerous queries and update statements being executed for an unmodified line item</description>
        <label>IsModified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBO__c</fullName>
        <description>Reference to Master MBO to which this MBO Item is attached.</description>
        <label>MBO</label>
        <referenceTo>Master_MBO__c</referenceTo>
        <relationshipLabel>MBO Items</relationshipLabel>
        <relationshipName>MBO_Item_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Measure_Unit__c</fullName>
        <label>Measure Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>%</fullName>
                    <default>true</default>
                    <label>%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <label>Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <description>Objective provided by Admin to the Partner.</description>
        <label>Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Growth</fullName>
                    <default>true</default>
                    <label>Sales Growth</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To assign MBO to a Partner Group.</description>
        <label>Partner Group</label>
        <referenceTo>MBO_Partner_Group__c</referenceTo>
        <relationshipLabel>MBO Item's</relationshipLabel>
        <relationshipName>MBO_Item_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Id_Set_III__c</fullName>
        <description>To collect only required Partner Ids, which is not overlapped in other line items. Need at-least seven set of Text Long fields.</description>
        <label>Partner Id Set_III</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Id_Set_II__c</fullName>
        <description>To collect only required Partner Ids, which is not overlapped in other line items. Need at-least seven set of Text Long fields.</description>
        <label>Partner Id Set_II</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Id_Set_IV__c</fullName>
        <description>To collect only required Partner Ids, which is not overlapped in other line items. Need at-least seven set of Text Long fields.</description>
        <label>Partner Id Set_IV</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Id_Set_I__c</fullName>
        <description>To collect only required Partner Ids, which is not overlapped in other line items. Need at-least seven set of Text Long fields.</description>
        <label>Partner Id Set_I</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Id_Set_V__c</fullName>
        <description>To collect only required Partner Ids, which is not overlapped in other line items. Need at-least seven set of Text Long fields.</description>
        <label>Partner Id Set_V</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Information__c</fullName>
        <description>This will identify whether the line item is created for Partner or Partner Group.</description>
        <label>Partner Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MBO Item's</relationshipLabel>
        <relationshipName>MBO_Item_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q1_Target_Percent__c</fullName>
        <description>Q1 Target Percentage provided by Admin to the Partner.</description>
        <label>Q1 Target Percent</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Target_Percent__c</fullName>
        <description>Q2 Target Percentage provided by Admin to the Partner.</description>
        <label>Q2 Target Percent</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Target_Percent__c</fullName>
        <description>Q3 Target Percentage provided by Admin to the Partner.</description>
        <label>Q3 Target Percent</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Segment provided by Admin to the Partner.</description>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <default>true</default>
                    <label>Sales</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>To identify whether the Line Item is scheduled. Currently this flag is used in the code for freezing the selection of Partner/Partner Group.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Yearly Target Percentage provided by Admin to the Partner.</description>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This will provide the type of the MBO Item. (Partners/Partner Group)</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Partner Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>MBO Item object enables Admin to add multiple Line items to the Partner MBO template(Master MBO).</description>
    <label>MBO Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MBO Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MBO__c</columns>
        <columns>Partner__c</columns>
        <columns>Partner_Group__c</columns>
        <columns>Partner_Information__c</columns>
        <columns>Objective__c</columns>
        <columns>Segment__c</columns>
        <columns>Target__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>